--- a/CaseStudySBA/GymSPA/ClientApp/src/app/list-category/list-category.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/list-category/list-category.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <table  border="1">
+      <table>
         <tr>
           <th>ID </th>
           <th> Name</th>
@@ -9,6 +9,10 @@
         <tr *ngFor="let cat of category">
           <td>{{cat.category_id}}</td>
           <td>{{cat.category_name}}</td>
+          <td>
+            <a [routerLink]="['/edit-Category',cat.id]">Edit</a>
+            <a [routerLink]="['/delete-Category',cat.id]">delete</a>
+          </td>
         </tr>
       </table>
     </div>
