Edit,update,delete working successfully

--- a/CaseStudySBA/GymSPA/ClientApp/src/app/edit-category/edit-category.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/edit-category/edit-category.component.html
@@ -1,4 +1,4 @@
-<form novalidate [formGroup]="frmCat" class="form-inline">
+<form novalidate [formGroup]="frmCat" class="form-inline" >
 
 
   <div class="form-group col-md-12">
@@ -9,8 +9,8 @@
     </div>
 
     <button type="button" class="btn btn-primary " style="margin-left:5px" (click)="Enable()" [hidden]="click">Edit</button>
-    <button type="button" class="btn btn-success" style="margin-left:5px" (click)="Disable()" [hidden]="click">Update</button>
-    <button type="button" class="btn btn-danger" style="margin-left:5px">Delete</button>
+    <button type="button" class="btn btn-success" style="margin-left:5px" (click)="saveForm(frmCat)" [hidden]="!click">Update</button>
+    <button type="button" class="btn btn-danger" style="margin-left:5px" (click)="deleteForm(frmCat)">Delete</button>
 </div>
 
 </form>
