--- a/CaseStudySBA/GymSPA/ClientApp/src/app/add-category/add-category.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/add-category/add-category.component.html
@@ -1,4 +1,4 @@
-<form novalidate [formGroup]="frmCat" class="form-inline" >
+<form novalidate [formGroup]="frmCat" class="form-inline" (ngSubmit)="saveForm(frmCat)">
   
 
   <div class="form-group col-md-4">
