--- a/CaseStudySBA/GymSPA/ClientApp/src/app/workout-collection/workout-collection.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/workout-collection/workout-collection.component.html
@@ -1,11 +1,9 @@
-<form novalidate [formGroup]="frmCat" class="form-inline">
+<form novalidate [formGroup]="frmCat" class="formInline">
 
 
-  <div class="form-group col-md-12">
-
-    <input type="text" name="Add Workout" id="Add Workout" formControlName="Add Workout" class="form-control" disabled placeholder="Add Workout">
- 
-  </div>
+ <div class="form-group col-md-12">
+   <input type="text" name="Add Workout" id="Add Workout" formControlName="Add Workout" class="form-control" disabled placeholder="Add Workout">
+</div>
 
 </form>
 
