Add workout working successfully

--- a/CaseStudySBA/GymSPA/ClientApp/src/app/app.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/app.component.html
@@ -6,7 +6,7 @@
     </li>
 
     <li class="navbar-item">
-      <a [routerLink]="['/add-Category']" class="nav-link" routerLinkActive="active">Add Category</a>
+      <a [routerLink]="['/list-Workout']" class="nav-link" routerLinkActive="active">List Workout</a>
     </li>
 
   </ul>
