--- a/CaseStudySBA/GymSPA/ClientApp/src/app/add-workout/add-workout.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/add-workout/add-workout.component.html
@@ -35,7 +35,7 @@
  </div>
 
   <div class="form-group">
-    <button type="submit" class="btn btn-success" style="margin-left:5px">Add Workout</button>
+    <button type="submit" class="btn btn-success" style="margin-left:5px" [disabled]="!frmCat.valid">Add Workout</button>
   </div>
 
 </form>
