Edit and Delete Workout Done

--- a/CaseStudySBA/GymSPA/ClientApp/src/app/app.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/app.component.html
@@ -2,11 +2,15 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <ul class="navbar-nav">
     <li class="navbar-item">
-      <a [routerLink]="['/list-Category']" class="nav-link" routerLinkActive="active">List Category</a>
+      <a [routerLink]="['Category']" class="nav-link" routerLinkActive="active">Category</a>
     </li>
 
     <li class="navbar-item">
-      <a [routerLink]="['/list-Workout']" class="nav-link" routerLinkActive="active">List Workout</a>
+      <a [routerLink]="['/Workout']" class="nav-link" routerLinkActive="active"> Workout</a>
+    </li>
+
+    <li class="navbar-item">
+      <a [routerLink]="['/add-workout']" class="nav-link" routerLinkActive="active">Add Workout</a>
     </li>
 
   </ul>
