--- a/CaseStudySBA/GymSPA/ClientApp/src/app/edit-workout/edit-workout.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/edit-workout/edit-workout.component.html
@@ -1,13 +1,18 @@
-<form novalidate [formGroup]="frmCat" >
+<form novalidate [formGroup]="frmCat">
+  <input type="hidden" formControlName="Note" />
+  <input type="hidden" formControlName="Calory" />
+  <input type="hidden" formControlName="Category" />
+  <input type="hidden" formControlName="WorkoutId" />
   <div class="form-group ">
     <input type="text" name="Title" id="Title" formControlName="Title" class="form-control" [ngClass]="{'is-valid':f.Title.valid,'is-invalid':f.Title.invalid &&f.Title.dirty}" />
     <div *ngIf="f.Title.invalid && f.Title.dirty&&f.Title.error?.required" class="invalid-feedback">
       Title is required
     </div>
   </div>
-<div class="  form-group form-inline">
-    <button type="button" class="btn btn-primary " style="margin-left:10px" (click)="saveForm(frmCat)">Edit</button>
-    <button type="button" class="btn btn-danger" style="margin-left:10px">Delete</button>
+  <div class="  form-group form-inline">
+    <a [routerLink]="['/edit',WorkoutAdd.workout_id]" class="btn btn-primary">Edit</a>
+    
+    <button type="button" class="btn btn-danger" style="margin-left:10px" (click)="deleteForm(frmCat)">Delete</button>
     <button type="button" class="btn btn-success" style="margin-left:10px">Start</button>
     <button type="button" class="btn btn-danger" style="margin-left:10px">End</button>
   </div>
