start n end time form created

--- a/CaseStudySBA/GymSPA/ClientApp/src/app/app.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/app.component.html
@@ -13,6 +13,20 @@
       <a [routerLink]="['/add-workout']" class="nav-link" routerLinkActive="active">Add Workout</a>
     </li>
 
+    <li class="navbar-item">
+      <a [routerLink]="['/edit/:id']" class="nav-link" routerLinkActive="active">Edit Workout</a>
+    </li>
+
+    <li class="navbar-item">
+      <a [routerLink]="['/start']" class="nav-link" routerLinkActive="active">Start Workout</a>
+    </li>
+
+    <li class="navbar-item">
+      <a [routerLink]="['/end']" class="nav-link" routerLinkActive="active">End Workout</a>
+    </li>
+
+
+
   </ul>
 </nav>
 
