--- a/CaseStudySBA/GymSPA/ClientApp/src/app/list-category/list-category.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/list-category/list-category.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <h3>Add Category</h3>
+      <h3>Category</h3>
 
       <app-add-category (CategoryAdded)="SaveCategory($event)"></app-add-category>
       <hr/>
