--- a/CaseStudySBA/GymSPA/ClientApp/src/app/add-workout/add-workout.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/add-workout/add-workout.component.html
@@ -1,5 +1,5 @@
 <form novalidate [formGroup]="frmCat" (ngSubmit)="saveForm(frmCat)" class="col-md-6">
-
+  <h3>Add Workout</h3>
   <div class="form-group">
     <label>Title</label>
     <input type="text" name="Title" id="Title" formControlName="Title" class="form-control" [ngClass]="{'is-valid':f.Title.valid,'is-invalid':f.Title.invalid &&f.Title.dirty}" />
