Almost 85% project done

--- a/CaseStudySBA/GymSPA/ClientApp/src/app/list-workout/list-workout.component.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/app/list-workout/list-workout.component.html
@@ -2,14 +2,14 @@
   <div class="row">
     <div class="col-md-4">
       <h3>Workout Tracker</h3>
-      <input type="text" class="form-control" name="search" [(ngModel)]="work" placeholder="Search here" />
-      <hr/>
-      <div *ngFor="let work of workout | filter: work">
-
-        <app-edit-workout [WorkoutAdd]="work" (EditWorkout)="Edited($event)" (DeleteWorkout)="Delete($event)"> </app-edit-workout>
-
-        <hr />
+       <input type="text" class="form-control" name="search" [(ngModel)]="work" placeholder="Search here" />
+      <hr />
+      <div *ngFor="let work of workout | workoutfilter: work">
+ <app-edit-workout [WorkoutAdd]="work" (EditWorkout)="Edited($event)" (DeleteWorkout)="Delete($event)"> </app-edit-workout>
+ <hr />
       </div>
     </div>
+    </div>
+  </div>
 
  
